--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
       - run: pip install -r requirements.txt
+             pip install numpy
              
 
       # run tests
