--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,6 +15,8 @@ jobs:
       - run: pip install -r requirements.txt
              pip install numpy
              pip install ctypes
+             pip install functools
+             pip install math
              
 
       # run tests
