--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-python@v3
       - run: pip install -r requirements.txt
              pip install numpy
+             pip install math
+             pip install functool
    
              
            
